--- a/gcc/java/ChangeLog
+++ b/gcc/java/ChangeLog
@@ -96,6 +96,14 @@
 
 2000-06-09  Bryce McKinlay  <bryce@albatross.co.nz>
 
+	* parse.y (find_applicable_accessible_methods_list): Use a hashtable
+	to track searched classes, and do not search the same class more than
+	once. Call find_applicable_accessible_methods_list on immediate
+	superclass, instead of search_applicable_method_list on all ancestors.
+	Fix for PR gcj/238.
+
+2000-06-09  Bryce McKinlay  <bryce@albatross.co.nz>
+
 	* parse.y (register_fields): Permit static fields in inner classes
 	if they are final. Fix for PR gcj/255.
 
