--- a/gcc/config/ia64/ia64.md
+++ b/gcc/config/ia64/ia64.md
@@ -2153,6 +2153,40 @@
   operands[3] = ia64_compare_op1;
 }")
 
+(define_expand "bunordered"
+  [(set (match_dup 1)
+	(unordered:CC (match_dup 2)
+		      (match_dup 3)))
+   (set (pc)
+	(if_then_else (ne:CC (match_dup 1)
+			     (const_int 0))
+		      (label_ref (match_operand 0 "" ""))
+		      (pc)))]
+  ""
+  "
+{
+  operands[1] = gen_reg_rtx (CCmode);
+  operands[2] = ia64_compare_op0;
+  operands[3] = ia64_compare_op1;
+}")
+
+(define_expand "bordered"
+  [(set (match_dup 1)
+	(ordered:CC (match_dup 2)
+		      (match_dup 3)))
+   (set (pc)
+	(if_then_else (ne:CC (match_dup 1)
+			     (const_int 0))
+		      (label_ref (match_operand 0 "" ""))
+		      (pc)))]
+  ""
+  "
+{
+  operands[1] = gen_reg_rtx (CCmode);
+  operands[2] = ia64_compare_op0;
+  operands[3] = ia64_compare_op1;
+}")
+
 (define_insn "*br_true"
   [(set (pc)
 	(if_then_else (match_operator 0 "predicate_operator"
@@ -2313,6 +2347,34 @@
   [(set (match_dup 1)
 	(geu:CC (match_dup 2)
 		(match_dup 3)))
+   (set (match_operand:DI 0 "register_operand" "")
+	(ne:DI (match_dup 1) (const_int 0)))]
+  ""
+  "
+{
+  operands[1] = gen_reg_rtx (CCmode);
+  operands[2] = ia64_compare_op0;
+  operands[3] = ia64_compare_op1;
+}")
+
+(define_expand "sunordered"
+  [(set (match_dup 1)
+	(unordered:CC (match_dup 2)
+		      (match_dup 3)))
+   (set (match_operand:DI 0 "register_operand" "")
+	(ne:DI (match_dup 1) (const_int 0)))]
+  ""
+  "
+{
+  operands[1] = gen_reg_rtx (CCmode);
+  operands[2] = ia64_compare_op0;
+  operands[3] = ia64_compare_op1;
+}")
+
+(define_expand "sordered"
+  [(set (match_dup 1)
+	(ordered:CC (match_dup 2)
+		      (match_dup 3)))
    (set (match_operand:DI 0 "register_operand" "")
 	(ne:DI (match_dup 1) (const_int 0)))]
   ""
