--- a/gcc/testsuite/ChangeLog
+++ b/gcc/testsuite/ChangeLog
@@ -1,3 +1,10 @@
+2000-06-27  H.J. Lu  <hjl@gnu.org>
+            Loren J. Rittle  <ljrittle@acm.org>
+
+        * lib/g++.exp (g++_include_flags): Override libgloss.exp
+        version with one that knows about the new gcc tree structure.
+        (g++_link_flags): Same.
+	
 2000-06-26  Zack Weinberg  <zack@wolery.cumb.org>
 
 	* gcc.dg/20000419-1.c, gcc.dg/cpp-mi.c, gcc.dg/cpp-tradwarn1.c,
