--- a/libjava/ChangeLog
+++ b/libjava/ChangeLog
@@ -1,3 +1,7 @@
+2000-06-27  Tom Tromey  <tromey@cygnus.com>
+
+	* java/lang/Double.java (valueOf): Call parseDouble().
+
 2000-06-26  Warren Levy  <warrenl@cygnus.com>
 
 	* java/beans/PropertyChangeEvent.java (oldVal): Renamed to oldValue.
