--- a/gcc/testsuite/ChangeLog
+++ b/gcc/testsuite/ChangeLog
@@ -1,3 +1,7 @@
+2000-06-27  Mark Mitchell  <mark@codesourcery.com>
+
+	* lib/g++.exp (g++_include_flags): Tweak.
+
 2000-06-27  H.J. Lu  <hjl@gnu.org>
             Loren J. Rittle  <ljrittle@acm.org>
 
