* decl.c (grokfndecl): Set DECL_CONTEXT for static functions too.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@34742 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/cp/ChangeLog
+++ b/gcc/cp/ChangeLog
@@ -1,3 +1,7 @@
+2000-06-27  Mark Mitchell  <mark@codesourcery.com>
+
+	* decl.c (grokfndecl): Set DECL_CONTEXT for static functions too.
+
 2000-06-26  Nathan Sidwell  <nathan@codesourcery.com>
 
 	* search.c (hides): Remove.
