--- a/libjava/ChangeLog
+++ b/libjava/ChangeLog
@@ -1,5 +1,10 @@
 2000-06-27  Tom Tromey  <tromey@cygnus.com>
 
+	* java/io/PushbackInputStream.java (read): If there are characters
+	in the buffer, don't also call super.read().
+	* java/io/PushbackReader.java (read): If there are characters in
+	the buffer, don't also call super.read().
+
 	* java/lang/Double.java (valueOf): Call parseDouble().
 
 2000-06-26  Warren Levy  <warrenl@cygnus.com>
