2000-06-27  Rolf W. Rasmussen  <rolfwr@ii.uib.no>
	* java/awt/event/MouseEvent.java: Fixed coordinate space
	confusion.


git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@34746 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/libjava/ChangeLog
+++ b/libjava/ChangeLog
@@ -1,3 +1,8 @@
+2000-06-27  Rolf W. Rasmussen  <rolfwr@ii.uib.no>
+
+	* java/awt/event/MouseEvent.java: Fixed coordinate space
+	confusion.
+
 2000-06-27  Tom Tromey  <tromey@cygnus.com>
 
 	* java/io/PushbackInputStream.java (read): If there are characters
