* java/security/Principal.java: New file. 	* Makefile.am: Added Principal.java. 	* Makefile.in: Rebuilt.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@34749 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/libjava/ChangeLog
+++ b/libjava/ChangeLog
@@ -1,3 +1,9 @@
+2000-06-27  Warren Levy  <warrenl@cygnus.com>
+
+	* java/security/Principal.java: New file.
+	* Makefile.am: Added Principal.java.
+	* Makefile.in: Rebuilt.
+
 2000-06-27  Rolf W. Rasmussen  <rolfwr@ii.uib.no>
 
 	* java/awt/event/MouseEvent.java: Fixed coordinate space
