* ThreadGroup.java: Added synchronized flag to many methods. 	(destroyed_flag): Removed. 	(isDestroyed, removeGroup, removeThread): Test for parent == null. 	(activeCount): Added spec note.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@34750 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/libjava/ChangeLog
+++ b/libjava/ChangeLog
@@ -1,3 +1,10 @@
+2000-06-28  Bryce McKinlay  <bryce@albatross.co.nz>
+
+	* ThreadGroup.java: Added synchronized flag to many methods.
+	(destroyed_flag): Removed.
+	(isDestroyed, removeGroup, removeThread): Test for parent == null.	
+	(activeCount): Added spec note.
+
 2000-06-27  Warren Levy  <warrenl@cygnus.com>
 
 	* java/security/Principal.java: New file.
