* cp-demangle.c (demangle_special_name): Swap base and derived 	class when demangling construction vtables.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@34751 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/libiberty/ChangeLog
+++ b/libiberty/ChangeLog
@@ -1,3 +1,8 @@
+2000-06-27  Alex Samuel  <samuel@codesourcery.com>
+
+	* cp-demangle.c (demangle_special_name): Swap base and derived
+	class when demangling construction vtables.
+
 2000-06-21  Alex Samuel  <samuel@codesourcery.com>
 
 	* cp-demangle.c: Don't include ctype.h.
