2000-06-27  Andrew Haley  <aph@cygnus.com>
       * java/io/File.java (createTempFile): Close the FileDescriptor
       used to create a temp file.  Fixes some of PR 203.
       * java/io/natFileDescriptorPosix.cc (open): Call garbage
       collection if we run out of file handles.


git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@34755 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/libjava/ChangeLog
+++ b/libjava/ChangeLog
@@ -1,3 +1,10 @@
+2000-06-27  Andrew Haley  <aph@cygnus.com>
+
+       * java/io/File.java (createTempFile): Close the FileDescriptor
+       used to create a temp file.  Fixes some of PR 203.
+       * java/io/natFileDescriptorPosix.cc (open): Call garbage
+       collection if we run out of file handles.
+
 2000-06-28  Warren Levy  <warrenl@cygnus.com>
 
 	* gnu/java/security/provider/Gnu.java: New file.
