--- a/gcc/config/i386/i386.md
+++ b/gcc/config/i386/i386.md
@@ -4806,7 +4806,8 @@
 			      (match_operand:QI 1 "nonmemory_operand" "n,n,qn,n"))
 		      (const_int 0)))]
   ""
-  "test{b}\\t{%1, %0|%0, %1} 
+  "@
+   test{b}\\t{%1, %0|%0, %1} 
    test{b}\\t{%1, %0|%0, %1} 
    test{b}\\t{%1, %0|%0, %1} 
    test{l}\\t{%1, %0|%0, %1}"
@@ -8452,6 +8453,9 @@
     return \"add{l}\\t{%1+[.-%X2], %0|%0, %a1+(.-%X2)}\";
 }"
   [(set_attr "type" "alu")
+   ; Since this insn may have two constant operands, we must set the
+   ; length manually.
+   (set_attr "length_immediate" "4")
    (set_attr "mode" "SI")])
 
 (define_insn "prologue_get_pc"
