--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,17 @@
+2000-06-28  Zack Weinberg  <zack@wolery.cumb.org>
+
+	* cppfiles.c (open_include_file): If open(2) returns EMFILE or
+	ENFILE, close all cached file descriptors and try again.      
+	(_cpp_execute_include): Keep a count of the number of times
+	each header is included.
+	(close_cached_fd): New function.
+	* cpphash.h (struct include_file): Rename before to
+	include_count; all users updated.  Make include_count and sysp
+	unsigned short.
+	* cppinit.c (cpp_finish): If -H, report headers that could use
+	reinclude guards.
+	(report_missing_guard): New function.
+
 Wed Jun 28 14:46:58 MET DST 2000  Jan Hubicka  <jh@suse.cz>
 
 	* i386.md (prologue_set_got): Set length_immediate field.
