* cpplex.c (output_line_command): Output correct #line if a header 	is including itself and is not protected against multiple inclusion.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@34761 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,8 @@
+2000-06-28  Jakub Jelinek  <jakub@redhat.com>
+
+	* cpplex.c (output_line_command): Output correct #line if a header
+	is including itself and is not protected against multiple inclusion.
+
 2000-06-28  Zack Weinberg  <zack@wolery.cumb.org>
 
 	* cppfiles.c (open_include_file): If open(2) returns EMFILE or
