--- a/gcc/testsuite/ChangeLog
+++ b/gcc/testsuite/ChangeLog
@@ -1,3 +1,9 @@
+2000-06-28  Jakub Jelinek  <jakub@redhat.com>
+
+	* gcc.dg/cpp/20000628-1.c: New test.
+	* gcc.dg/cpp/20000628-1.h: New header for above test.
+	* gcc.dg/cpp/20000628-1a.h: Likewise.
+
 2000-06-27  Zack Weinberg  <zack@wolery.cumb.org>
 
 	* gcc.dg/cpp: New directory.
