* config/alpha/alpha.c (summarize_insn): Ignore SCRATCH.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@34764 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,7 @@
+2000-06-28  Richard Henderson  <rth@cygnus.com>
+
+	* config/alpha/alpha.c (summarize_insn): Ignore SCRATCH.
+
 2000-06-28  Jakub Jelinek  <jakub@redhat.com>
 
 	* cpplex.c (output_line_command): Output correct #line if a header
