--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,9 @@
+2000-06-28  Jason Merrill  <jason@redhat.com>
+
+	* dwarf2out.c (output_loc_operands): Don't support >1 byte output
+	unless DWARF2_DEBUGGING_INFO is defined.
+	(ASM_OUTPUT_DWARF_*): Wrap normal output defs with #ifndefs.
+
 2000-06-28  Richard Henderson  <rth@cygnus.com>
 
 	* config/alpha/alpha.c (summarize_insn): Ignore SCRATCH.
