* flow.c (flow_depth_first_order_compute): Fix algorithm.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@34774 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,7 @@
+2000-06-29  Michael Hayes  <m.hayes@elec.canterbury.ac.nz>
+
+	* flow.c (flow_depth_first_order_compute): Fix algorithm.
+
 2000-06-28  Philipp Thomas  <pthomas@suse.de>
 
 	* c-decl.c : Mark strings for translation.
